--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <ul class="navbar-nav">
 
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#" style="color: #fff; text-shadow: 0 #fff;">Home</a>
+                        <a class="nav-link active" aria-current="page" href="./index.html" style="color: #fff; text-shadow: 0 #fff;">Home</a>
                       </li>
 
                       <li class="nav-item dropdown">
@@ -54,9 +54,9 @@
                           Academics
                         </a>
                         <ul class="dropdown-menu">
-                          <li><a class="dropdown-item" href="#" style="color: black; text-shadow: 0 0;">Campus</a></li>
-                          <li><a class="dropdown-item" href="#" style="color: black; text-shadow: 0 0;">Library</a></li>
-                          <li><a class="dropdown-item" href="#" style="color: black; text-shadow: 0 0;">Students</a></li>
+                          <li><a class="dropdown-item" href="./campus.html" style="color: black; text-shadow: 0 0;">Campus</a></li>
+                          <li><a class="dropdown-item" href="./Library.html" style="color: black; text-shadow: 0 0;">Library</a></li>
+                          <li><a class="dropdown-item" href="" style="color: black; text-shadow: 0 0;">Students</a></li>
                         </ul>
                       </li>
 
@@ -70,7 +70,7 @@
                       </li>
 
                       <li class="nav-item">
-                        <a class="nav-link" href="#">T&P</a>
+                        <a class="nav-link" href="./Placements.html">T&P</a>
                       </li>
 
                       <li class="nav-item">
@@ -90,13 +90,19 @@
           <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="./css/images/pexels-rodolfo-clix-1036936.jpg" class="d-block w-100" alt="...">
+                <img src="./css/images/computer dept.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="./css/images/pexels-francesco-ungaro-96381.jpg" class="d-block w-100" alt="...">
+                <img src="./css/images/civil dept.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="./css/images/pexels-flickr-157040.jpg" class="d-block w-100" alt="...">
+                <img src="./css/images/etc dept.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="./css/images/img2.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="./css/images/img5.png" class="d-block w-100" alt="...">
               </div>
             </div>
           </div>
@@ -105,7 +111,7 @@
                 <div class="col-sm-7 home-about-col home-about-left">
                   <div class="home-about">
                     <h1>About GEC</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique deleniti quis magni voluptatum perspiciatis, harum possimus quos, alias omnis doloribus corporis nesciunt voluptate dolor nihil quo, molestias saepe esse delectus! <a href="">Read More</a></p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique deleniti quis magni voluptatum perspiciatis, harum possimus quos, alias omnis doloribus corporis nesciunt voluptate dolor nihil quo, molestias saepe esse delectus!</p>
                     <h3>Our Vision</h3>
                     <p>A TECHNICAL INSTITUTE WITH A FOCUS ON EXCELLENCE IN ACADEMICS, RESEARCH, INDUSTRY COLLABORATION AND NURTURING HUMAN VALUES IN STUDENTS.</p>
                     <h3>Our Mission</h3>
