update rest html components

--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
                         <ul class="dropdown-menu">
                           <li><a class="dropdown-item" href="./campus.html" style="color: black; text-shadow: 0 0;">Campus</a></li>
                           <li><a class="dropdown-item" href="./Library.html" style="color: black; text-shadow: 0 0;">Library</a></li>
-                          <li><a class="dropdown-item" href="" style="color: black; text-shadow: 0 0;">Students</a></li>
+                          <li><a class="dropdown-item" href="./students.html" style="color: black; text-shadow: 0 0;">Students</a></li>
                         </ul>
                       </li>
 
                       <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"  disabled>
                           Administration
                         </a>
                         <ul class="dropdown-menu">
