--- a/students.html
+++ b/students.html
@@ -19,7 +19,7 @@
     
 </head>
 <body>
-    <h1>No on registered yet!</h1>
+    <h1>No one registered yet! 😰😭🙂</h1>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>
