--- a/index.html
+++ b/index.html
@@ -176,87 +176,52 @@
 
         </div>
 
-        <h1>GALLERY</h1>
+        <h1 class="gallery-header">GALLERY</h1>
         <div class="row image-gallery">
 
 
             <div class="col col-sm-2 img-container">
               <img src="./css/images/civil dept.jpg" alt="" srcset="" class="gallery-img">
               <div class="grid-overlay flex-col-center">
-                <button class="viewbutton">View More</button>
+                <button class="viewbutton">View</button>
               </div>
             </div>
 
             <div class="col col-sm-2 img-container">
               <img src="./css/images/civil dept.jpg" alt="" srcset="" class="gallery-img">
-              <div class="grid-overlay">
-                <button class="viewbutton">View More</button>
+              <div class="grid-overlay flex-col-center">
+                <button class="viewbutton">View</button>
               </div>
             </div>
 
             <div class="col col-sm-2 img-container">
               <img src="./css/images/civil dept.jpg" alt="" srcset="" class="gallery-img">
-              <div class="grid-overlay">
-                <button class="viewbutton">View More</button>
+              <div class="grid-overlay flex-col-center">
+                <button class="viewbutton">View</button>
               </div>
             </div>
 
             <div class="col col-sm-2 img-container">
               <img src="./css/images/civil dept.jpg" alt="" srcset="" class="gallery-img">
-              <div class="grid-overlay">
-                <button class="viewbutton">View More</button>
+              <div class="grid-overlay flex-col-center">
+                <button class="viewbutton">View</button>
               </div>
             </div>
 
             <div class="col col-sm-2 img-container">
               <img src="./css/images/civil dept.jpg" alt="" srcset="" class="gallery-img">
-              <div class="grid-overlay">
-                <button class="viewbutton">View More</button>
+              <div class="grid-overlay flex-col-center">
+                <button class="viewbutton">View</button>
               </div>
             </div>
 
             <div class="col col-sm-2 img-container">
               <img src="./css/images/civil dept.jpg" alt="" srcset="" class="gallery-img">
-              <div class="grid-overlay">
-                <button class="viewbutton">View More</button>
+              <div class="grid-overlay flex-col-center">
+                <button class="viewbutton">View</button>
               </div>
             </div>
 
-            <!-- <div class="img-container">
-              <img src="./css/images/civil dept.jpg" alt="" srcset="" class="gallery-img">
-              <div class="grid-overlay">
-                <button class="viewbutton">View More</button>
-              </div>
-            </div>
-
-            <div class="img-container">
-              <img src="./css/images/civil dept.jpg" alt="" srcset="" class="gallery-img">
-              <div class="grid-overlay">
-                <button class="viewbutton ">View More</button>
-              </div>
-            </div>
-
-            <div class="img-container">
-              <img src="./css/images/civil dept.jpg" alt="" srcset="" class="gallery-img">
-              <div class="grid-overlay">
-                <button class="viewbutton">View More</button>
-              </div>
-            </div>
-
-            <div class="img-container">
-              <img src="./css/images/civil dept.jpg" alt="" srcset="" class="gallery-img">
-              <div class="grid-overlay">
-                <button class="viewbutton">View More</button>
-              </div>
-            </div>
-
-            <div class="img-container">
-              <img src="./css/images/civil dept.jpg" alt="" srcset="" class="gallery-img">
-              <div class="grid-overlay">
-                <button class="viewbutton">View More</button>
-              </div>
-            </div>
- -->
             <div class="overlay">
               <div class="overlay-inner flex-col-center">
                 <button class="close">Close X</button>
