--- a/Placements.html
+++ b/Placements.html
@@ -31,7 +31,7 @@
             <ul class="navbar-nav">
 
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./index.html" style="color: #fff; text-shadow: 0 #fff;">Home</a>
+                <a class="nav-link active" aria-current="page" href="http://localhost/phpmyadmin/index.php" style="color: #fff; text-shadow: 0 #fff;">Home</a>
               </li>
 
               <li class="nav-item dropdown">
